--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ build:
   skip: True  # [win]
   skip: True  # [osx]
   skip: True  # [py<39]
-  skip: True  # [py<312]
+  skip: True  # [py>311]
 
 requirements:
   build:
