--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,8 +25,10 @@ requirements:
     - python
     - setuptools >=61.0
     - pip
+    - numpy <2.0a0
   run:
     - python
+    - {{ pin_compatible('numpy') }}
     - gmsh
     - python-gmsh
     - moab >=5.3.0
