--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - python
     - setuptools >=61.0
     - pip
-    - numpy <2.0a0
+    - numpy <2.0
   run:
     - python
     - gmsh
